# ctrader-bot

./: .gitignore  Cargo.toml
.ai/: plan-headless-api.md  summary.md
.ai/Documents/: architecture.drawio
bot/: .env.example  .gitignore  Cargo.toml  README.md  build.rs
bot/src/: auth.rs  bot_loop.rs  connection.rs  main.rs  state.rs  tests.rs
bot/src/api/: dto.rs  log_layer.rs  mod.rs  symbols.rs  ws.rs
bot/src/api/routes/: account.rs  mod.rs  orders.rs  positions.rs  quotes.rs  status.rs  strategy.rs  symbols.rs  trades.rs
bot/src/proto/: _.rs
